DEV6_Componentslist/objects/Venue__c.object
<CustomObject>
    <description>Venues used for courses or events</description>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_or_Building_Society_Name__c</fullName>
        <description>Regarding account holder bank name or Society name</description>
        <label>Bank or Building Society Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venue</relationshipLabel>
        <relationshipName>Venue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>City</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <label>MailingLatitude</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongtitude__c</fullName>
        <label>MailingLongtitude</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>PostalCode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parking_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Venue</relationshipLabel>
        <relationshipName>Venue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projector_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projector required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Time__c</fullName>
        <label>Setup Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Equipment__c</fullName>
        <label>Special Equipment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tidy_up_Time__c</fullName>
        <label>Tidy up Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Venue_GeoLocation__c</fullName>
        <description>Geolocation of the venue</description>
        <label>Venue_GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Venue_Keys__c</fullName>
        <description>Contact details for the venue keys</description>
        <inlineHelpText>Please provide information about where/ who to contact to access the venue e.g. keyholder name and telephone number.</inlineHelpText>
        <label>Venue Keys</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Suitability__c</fullName>
        <label>Venue Suitability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Courses</fullName>
                </value>
                <value>
                    <fullName>Bumps &amp; Babies</fullName>
                </value>
                <value>
                    <fullName>Training Days</fullName>
                </value>
                <value>
                    <fullName>Branch team meetings</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Emergency_Contact__c</columns>
        <columns>Capacity__c</columns>
        <columns>MailingStreet__c</columns>
        <columns>MailingCity__c</columns>
        <columns>MailingPostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>